# ZephCore

./: .gitignore  MESHTIMESYNC.md  PROVIDER_CATALOG.md  README.md  SHADOW_CONTEXT.md  build.sh  build_waveshare_rp2040_lora_repeater.sh  build_waveshare_rp2040_lora_room_server.sh  gen_provider_catalog.py
.github/workflows/: build.yml
firmware/: RELEASE_shadow-v20260714.1.md  RELEASE_shadow-v20260715.1.md  RELEASE_shadow-v20260716.1.md  RELEASE_shadow-v20260716.2.md  RELEASE_shadow-v20260722.1.md  picow-repeater.uf2  shadow-20260715-t1000-e-client.uf2  shadow-20260715-thinknode-m1-client.uf2  shadow-20260715-thinknode-m6-repeater.uf2  t1000_e-companion-3ed0b86.uf2  thinknode_m1-companion-3ed0b86.uf2  thinknode_m6-repeater-3ed0b86.uf2  waveshare_rp2040_lora-room-server.uf2
formatter/: README.md
releasenotes/: RELEASE_NOTES_v1.16.5.md
zephcore/: ADAPTIVE_CAD.md  ARCHITECTURE.md  CMakeLists.txt  Kconfig  Kconfig.psram  LICENSE  LINUX_NATIVE.md  Repeater_CLI_commands.md  apc.md  west.yml
zephcore/adapters/ble/: ZephyrBLE.cpp  ZephyrBLE.h
zephcore/adapters/board/: ZephyrBoard.cpp  ZephyrBoard.h
zephcore/adapters/clock/: ZephyrMillisecondClock.cpp  ZephyrMillisecondClock.h  ZephyrRTCClock.cpp  ZephyrRTCClock.h  ZephyrRTCDiscover.c  ZephyrRTCDiscover.h
zephcore/adapters/datastore/: ZephyrDataStore.cpp  ZephyrDataStore.h
zephcore/adapters/gps/: ZephyrGPSManager.cpp  ZephyrGPSManager.h
zephcore/adapters/mqtt/: ZephyrMQTTPublisher.c  ZephyrMQTTPublisher.h
zephcore/adapters/ota/: wifi_ota.c  wifi_ota.h
zephcore/adapters/radio/: LR1110Radio.cpp  LR1110Radio.h  LR2021Radio.cpp  LR2021Radio.h  LoRaRadioBase.cpp  LoRaRadioBase.h  SX126xRadio.cpp  SX126xRadio.h  SX127xRadio.cpp  SX127xRadio.h  radio_common.h
zephcore/adapters/radio/lr11xx/: lr11xx_hal_zephyr.c  lr11xx_hal_zephyr.h
zephcore/adapters/radio/lr20xx/: lr20xx_hal_zephyr.c  lr20xx_hal_zephyr.h
zephcore/adapters/rng/: RNG.cpp  ZephyrRNG.cpp  ZephyrRNG.h
zephcore/adapters/sensors/: SimpleLPP.h  ZephyrEnvSensors.cpp  ZephyrEnvSensors.h  ZephyrSensorManager.h
zephcore/adapters/transport/: LinuxTCPTransport.c  SerialCompanionTransport.c  companion_framing.h  linux_native_setup.c
zephcore/adapters/usb/: ZephyrCompanionUSB.cpp  ZephyrCompanionUSB.h  ZephyrUSBCDC.cpp  ZephyrUSBCDC.h
zephcore/adapters/wifi/: ZephyrWiFiStation.c  ZephyrWiFiStation.h
zephcore/app/: CompanionMesh.cpp  CompanionMesh.h  ObserverMesh.cpp  ObserverMesh.h  RepeaterDataStore.cpp  RepeaterDataStore.h  RepeaterMesh.cpp  RepeaterMesh.h  RepeaterRegionCLI.cpp  RepeaterUplink.cpp  RoomServerMesh.cpp  RoomServerMesh.h  RoomServerRegionCLI.cpp  main_observer.cpp  observer_creds.cpp  observer_creds.h
zephcore/boards/: supported_boards.md
zephcore/boards/common/: ble_common.conf  esp32_ble_common.conf  esp32_common.conf  femtofox.conf  femtofox.overlay  filesystem.dtsi  linux_common.conf  linux_common.overlay  mg24_ble_common.conf  mg24_common.conf  nrf52_ble_common.conf  nrf52_common.conf  nrf52_partitions_sdv6.dtsi  nrf52_partitions_sdv7.dtsi  nrf52_wakeup.dtsi  nrf54l_ble_common.conf  nrf54l_common.conf  observer.conf  qspi-ext.dtsi  repeater_uplink.conf  rp2040_common.conf  rpi5_rak6421.conf  rpi5_rak6421.overlay  rpi_rak6421.conf  rpi_rak6421.overlay  rtc-i2c.dtsi  sensors-i2c.dtsi  serial_companion.conf  stm32wl_common.conf  zephcore_common.conf
zephcore/boards/esp32/heltec_wifi_lora32_v3/: board.conf  board.overlay  partitions.overlay
zephcore/boards/esp32/heltec_wifi_lora32_v4/: board.overlay  heltec_wifi_lora32_v4-pinctrl.dtsi  heltec_wifi_lora32_v4_procpu.dts
zephcore/boards/esp32/heltec_wifi_lora32_v43/: board.overlay  heltec_wifi_lora32_v43-pinctrl.dtsi  heltec_wifi_lora32_v43_procpu.dts
zephcore/boards/esp32/heltec_wireless_tracker/: board.overlay
zephcore/boards/example_board/: README.md  board.overlay
zephcore/boards/linux_native/: femtofox.overlay  linux_common.conf  linux_common.overlay  rak6421.overlay  rak6421_pi5.overlay
zephcore/helpers/: AdvertDataHelpers.cpp  AdvertDataHelpers.h  BaseChatMesh.cpp  BaseChatMesh.h  ChannelDetails.h  ClientACL.cpp  ClientACL.h  CommonCLI.cpp  CommonCLI.h  ContactInfo.h  IdentityStore.h  LocalCLIHelp.h  MeshTimeSync.cpp  MeshTimeSync.h  MeshcoreJson.h  NodePrefs.h  RateLimiter.h  RegionMap.cpp  RegionMap.h  StatsFormatHelper.h  TransportKeyStore.cpp  TransportKeyStore.h  TxtDataHelpers.h  battery_curve.c  battery_curve.h  fatal_reboot.c  joystick_ui_hooks.h  oled_power.c  oled_power.h  time_sync.h
zephcore/helpers/ui/: buzzer.c  buzzer.h  cfb_font_0608.c  display.c  display.h  display_mono_tft.c  doom_game.c  doom_game.h  input_multi_tap.c  ui_common.c  ui_headless_stubs.c  ui_mesh_actions.cpp  ui_mesh_actions.h  ui_mesh_actions_stubs.c  ui_task.h  ui_timezone.c  ui_timezone.h
zephcore/helpers/ui-button/: time_sync.c  ui_pages.c  ui_pages.h  ui_task.c
zephcore/helpers/ui-joystick/: joystick_defs.h  joystick_display.h  joystick_screens.h  joystick_ui_hooks.cpp  joystick_ui_hooks.h  joystick_ui_task.cpp  joystick_ui_task.h  time_sync.c
zephcore/include/mesh/: Board.h  Clock.h  ContentionTracker.h  Dispatcher.h  Identity.h  LoRaConfig.h  Mesh.h  MeshCore.h  Packet.h  PowerController.h  RNG.h  RTC.h  Radio.h  RadioIncludes.h  SimpleMeshTables.h  StaticPoolPacketManager.h  Utils.h  stm32_cmsis_fixup.h
zephcore/lib/monocypher/: CMakeLists.txt
zephcore/patches/zephyr/: 0003-lora-sx126x-native.patch  0007-spi-gpio-native-linux.patch  0009-display-ssd16xx-fill-ram-white.patch
zephcore/src/: ContentionTracker.cpp  Dispatcher.cpp  Identity.cpp  Mesh.cpp  Packet.cpp  PowerController.cpp  StaticPoolPacketManager.cpp  Utils.cpp  main_companion.cpp  main_repeater.cpp  main_room_server.cpp
zephcore/sysbuild/: CMakeLists.txt
zephcore/tools/formatter/: CMakeLists.txt
zephcore/tools/formatter/src/: main.c  qspi_probe.c  qspi_probe.h
zephcore/tools/lr1110_updater/: CMakeLists.txt
zephcore/tools/lr1110_updater/boards/t1000_e/: board.overlay
zephcore/tools/lr1110_updater/src/: lr11xx_hal_updater.c  lr11xx_hal_updater.h  main.c
(+177 files in other folders)
